platform_versioned_docs/version-4.12.0/_partials/install/multiple-sso.mdx
In the Platform, you can also configure _multiple_ SSO providers together. This
can be a very handy feature if you have multiple groups using different
authentication providers based on team or geographical region. Configuration of
multiple SSO providers _of the same type_ is also possible. The latter is
configured by using the "connectors" option. Below is an example platform config
"auth" section that contains three SSO providers (one OIDC, and two GitHub
providers). Users logging into the platform with such a configuration present
see three options for authentication as well as the default username/password
box (which you can turn off if desired).

Add the following YAML configuration to your platform config (the `config` section of the [`values.yaml`](../../configure/introduction.mdx)) or through vCluster Platform UI <!-- vale off -->**Admin > Config**<!-- vale on -->:

```yaml title="Multiple SSO providers"
auth:
  github:
    clientId: test123
    clientSecret: test123
    redirectURI: https://my-vcluster-platform-url/auth/github/callback
  oidc:
    clientId: test
    clientSecret: test
    issuerUrl: https://example-issuer.com
    redirectURI: https://my-vcluster-platform-url/auth/oidc/callback
  # If you want to use multiple SSO configs of the same type you can use the connectors option
  connectors:
    # the id of the connector that will show up in the vcluster-platform callback url
    - id: test
      # name to show in the UI
      displayName: Test GitHub
      # any regular sso config
      github:
        clientId: test
        clientSecret: test
        # Make sure to exchange test here with the connector id if you change that
        redirectURI: https://my-vcluster-platform-url/auth/test/callback
```
